# magicbot-z1_description

./: CMakeLists.txt  README.md  package.xml
launch/: view.launch.py
meshes/: head_link.STL  left_ankle_pitch_link.STL  left_elbow_link.STL  left_hip_pitch_link.STL  left_hip_roll_link.STL  left_hip_yaw_link.STL  left_knee_link.STL  left_shoulder_pitch_link.STL  left_shoulder_roll_link.STL  left_shoulder_yaw_link.STL  left_wrist_yaw_link.STL  pelvis.STL  right_ankle_pitch_link.STL  right_elbow_link.STL  right_hip_pitch_link.STL  right_hip_roll_link.STL  right_hip_yaw_link.STL  right_knee_link.STL  right_shoulder_pitch_link.STL  right_shoulder_roll_link.STL  right_shoulder_yaw_link.STL  right_wrist_yaw_link.STL  torso_link.STL
mjcf/: MAGICBOTZ1.xml
rviz/: view.rviz
urdf/: MagicBotZ1.urdf
